Fixed a layout bug with the svg charts

--- a/src/main/resources/content/styles.css
+++ b/src/main/resources/content/styles.css
@@ -231,5 +231,5 @@ div.item div.controls {
 .chart svg {
    border:0px solid grey;
    width:100%;
-   max-height:300px;
+   max-height:100%;/*https://bugs.webkit.org/show_bug.cgi?id=82489*/
 }
